assets/css/index.css
/*
	Stylesheet for index.html specific elements such as the welcome block.
*/

div.welcome-block {
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	color: white;
}

div.welcome-block h1 {
	font-family: 'Roboto';
	font-weight: bold;
	font-size: 40pt;

	padding: 100px;
	padding-top: 120px;
	padding-bottom: 5px;
	text-align: left;
}

div.welcome-block p {
	font-family: 'Open Sans';
	font-weight: bolder;
	font-size: 25pt;

	padding: 100px;
	padding-bottom: 120px;
	padding-top: 0;
	text-align: left;
}

@media screen and (max-width: 600px) {
	div.welcome-block h1 {
		font-size: 30pt;
		padding: 60px;
		padding-bottom: 5px;
	}

	div.welcome-block p {
		font-size: 20pt;
		padding: 60px;
		padding-top: 0;
	}
}

/*
	About block
*/

div.about-block {
	background: #355E3B;
	width: 100%;
	color: white;
}

div.about-block h3 {
	font-family: 'Roboto';
	font-weight: bold;
	font-size: 30pt;

	padding: 30px;
	padding-bottom: 5px;
}

div.about-block p {
	font-family: 'Open Sans';
	font-size: 18pt;
	font-weight: bolder;
	
	padding: 30px;
	padding-top: 0;
}

@media screen and (max-width: 600px) {
	div.about-block h3 {
		font-size: 20pt;

		padding: 25px;
		padding-bottom: 5px;
	}

	div.about-block p {
		font-size: 15pt;
		padding: 25px;
		padding-top: 0;
	}
}

/*
	Contact block styling
*/

div.contact-block {
	background: lightgray;
	width: 100%;
}

div.contact-block h3 {
	font-family: 'Roboto';
	font-weight: bold;
	font-size: 30pt;

	padding: 30px;
	padding-bottom: 5px;
}

div.contact-block p {
	font-family: 'Open Sans';
	font-weight: bolder;
	font-size: 18pt;

	padding: 30px;
	padding-top: 0;
	padding-bottom: 5px;
}

div.contact-block form {
	padding: 30px;
	padding-top: 0;

}

div.contact-block form .labels {
	display: inline-flex;
	flex-direction: column;
	width: 300px;
}

div.contact-block form .labels label {
	font-family: 'Open Sans';
	font-weight: bolder;
	font-size: 15pt;
	
	padding: 3px;
	margin: 5px;
	line-height: 43px;
	flex-shrink: 1;
}

div.contact-block form .inputs {
	display: inline-flex;
	flex-direction: column;
}

div.contact-block form input[type="text"] {
	font-family: 'Open Sans';
	font-weight: bolder;
	font-size: 15pt;
	border: 3px solid black;
	padding: 5px;
	margin: 5px;
}

div.contact-block form textarea {
	font-family: 'Open Sans';
	font-weight: bolder;
	font-size: 15pt;
	border: 3px solid black;
	padding: 5px;
	margin: 5px;
	resize: none;
	border-radius: 0;
}

button#contactSubmitButton {
	background: #355E3B;
	color: white;
	padding: 10px;
	font-family: 'Open Sans';
	display: block;
	
}

div.mobile-form {
	display: none;
}

@media screen and (max-width: 600px) {
	div.contact-block h3 {
		font-size: 20pt;
		padding: 20px;
		padding-bottom: 5px;
	}

	div.contact-block p {
		font-size: 15pt;
		padding-top: 0;
	}

	div.contact-block div.inputs, div.contact-block div.labels {
		display: none;
	}

	div.contact-block div.mobile-form {
		display: block;
	}
}

